--- a/app/views/sub_tasks/show.html.erb
+++ b/app/views/sub_tasks/show.html.erb
@@ -2,41 +2,54 @@
   <div class="row mx-2">
     <h1>サブタスク詳細ページ</h1>
   </div>
-  <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold">サブタスク</p>
-    <p><%= @sub_task.sub_task %></p>
-  </div>
-  <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold">関連メインタスク</p>
-    <p><%= @sub_task.main_task.main_task %></p>
-  </div>
-  <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold">メモ</p>
-    <% if @sub_task.memo.present? %>
-      <p><%= @sub_task.memo %></p>
-    <% else %>
-      <p>メモはありません</p>
-    <% end %>
-  </div>
-  <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold">期日</p>
-    <% if @sub_task.due_date.present? %>
-      <p><%= @sub_task.due_date.strftime('%Y年%m月%d日') %></p>
-    <% else %>
-      <p>期日がありません</p>
-    <% end %>
-  </div>
-  <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold">タスクステータス</p>
-    <p><%= SubTask.statuses_i18n[@sub_task.status] %></p>
-  </div>
+  <div class="mx-2 my-4">
+    <h2>サブタスク詳細</h2>
     <div class="border rounded px-2 my-2">
-      <p class="font-weight-bold">Today Taskフラグ</p>
-    <% if @sub_task.is_today_task == true %>
-      <p>はい</p>
-    <% elsif @sub_task.is_today_task == false %>
-      <p>いいえ</p>
-    <% end %>
+      <p class="font-weight-bold">サブタスク</p>
+      <p><%= @sub_task.sub_task %></p>
+    </div>
+    <div class="border rounded px-2 my-2">
+      <p class="font-weight-bold">関連メインタスク</p>
+      <p><%= @sub_task.main_task.main_task %></p>
+    </div>
+    <div class="border rounded px-2 my-2">
+      <p class="font-weight-bold">メモ</p>
+      <% if @sub_task.memo.present? %>
+        <p><%= @sub_task.memo %></p>
+      <% else %>
+        <p>メモはありません</p>
+      <% end %>
+    </div>
+    <div class="border rounded px-2 my-2">
+      <p class="font-weight-bold">期日</p>
+      <% if @sub_task.due_date.present? %>
+        <p><%= @sub_task.due_date.strftime('%Y年%m月%d日') %></p>
+      <% else %>
+        <p>期日がありません</p>
+      <% end %>
+    </div>
+    <div class="border rounded px-2 my-2">
+      <p class="font-weight-bold">タスクステータス</p>
+      <p><%= SubTask.statuses_i18n[@sub_task.status] %></p>
+    </div>
+      <div class="border rounded px-2 my-2">
+        <p class="font-weight-bold">Today Taskフラグ</p>
+      <% if @sub_task.is_today_task == true %>
+        <p>はい</p>
+      <% elsif @sub_task.is_today_task == false %>
+        <p>いいえ</p>
+      <% end %>
+    </div>
+    <%= link_to "編集", edit_sub_task_path(@sub_task.id), class: "border border-dark btn-light btn-sm" %>
   </div>
-  <%= link_to "編集", edit_sub_task_path(@sub_task.id), class: "border border-dark btn-light btn-sm" %>
+  <div class="mx-2 my-4">
+    <h2>関連メインタスク</h2>
+    <table class="table table-bordered table-sm align-middle">
+        <tr>
+          <td>
+            <%= link_to @sub_task.main_task.main_task, user_main_task_path(@sub_task.main_task.user_id, @sub_task.main_task.id) %>
+          </td>
+        </tr>
+    </table>
+  </div>
 </div>
