--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>●トップページ●</h2>
+  <h2>トップページ</h2>
   <p>●Today's Taskは個人のニーズに合った使い方ができるToDo Listです。</p>
   <p>●一番の特徴は多くのタスクの中から今日実施するタスク = Today's Taskを選択することで、今日の目標をはっきりさせることが可能です！</p>
   <%= image_tag 'task_index.png', class:"border rounded" %>
