--- a/app/views/main_tasks/index.html.erb
+++ b/app/views/main_tasks/index.html.erb
@@ -10,18 +10,18 @@
     <% if params[:today].present? %>
       <%= link_to "Today以外も表示", user_main_tasks_path(@user.id, status: params[:status], category: params[:category], order: params[:order]), class: "btn-sm btn-warning" %>
     <% else %>
-      <%= link_to "♥Todayのみ表示", user_main_tasks_path(@user.id, status: params[:status], category: params[:category], order: params[:order], today: 1), class: "btn-sm btn-warning" %>
+      <%= link_to "♥Todayのみ表示", user_main_tasks_path(@user.id, status: params[:status], category: params[:category], order: params[:order], today: "yes"), class: "btn-sm btn-warning" %>
     <% end %>
   </div>
   <div class="mb-2">
     <%= form_with url: user_main_tasks_path(@user.id), method: :get do |f| %>
       <div>
         ステータス：
-        <%= f.radio_button :status, '', checked: params[:status].blank? %>
-        <%= f.label :status, '全て', value: '' %>
-        <%= f.radio_button :status, 0, checked: params[:status] == "0" %>
+        <%= f.radio_button :status, 'all', checked: params[:status] == 'all' || params[:status].blank?  %>
+        <%= f.label :status, '全て', value: 'all' %>
+        <%= f.radio_button :status, "incomplete", checked: params[:status] == "incomplete" %>
         <%= f.label :status, '未完', value: 0 %>
-        <%= f.radio_button :status, 1, checked: params[:status] == "1" %>
+        <%= f.radio_button :status, "done", checked: params[:status] == "done" %>
         <%= f.label :status, '完了', value: 1 %>
         /
         カテゴリー：
@@ -29,7 +29,7 @@
         <%= f.submit "絞り込む", name: nil, data: {"turbolinks"=>false} %>
       </div>
       <div>
-        <%=f.select :order, [["作成順", 0], ["名前順", 1], ["期日順", 2]], { selected: params[:order]} %>
+        <%=f.select :order, [["作成順", "created_at"], ["名前順", "name"], ["期日順", "due"]], { selected: params[:order]} %>
         <%= f.submit "並び替える", name: nil, data: {"turbolinks"=>false} %>
       </div>
     <% end %>
